fix z-index

--- a/app/assets/stylesheets/editor-3/privacy-dropdown.css.scss
+++ b/app/assets/stylesheets/editor-3/privacy-dropdown.css.scss
@@ -24,7 +24,7 @@
   right: 0;
   left: 0;
   width: 248px;
-  z-index: 2;
+  z-index: 11;
 }
 
 .Privacy-passwordField {
